# mteb

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  AVEDatasetClassification_results.json  CHANGELOG-default.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.hf-space  LICENSE  MTEB benchmark runbook.md  MTEB-WAVE-7B.md  Makefile  README.md  STSIDMT.py  TODO.md  VideoRetrieval.json  _add_stats.grit  activate_mteb.sh  add_paramter_to_modelmeta.py  all_met.txt  api_spec_tmp.py  check.py  chem_eval.py  citation.cff  create_beir_predictions.py  create_benchmarks_table.py  ev.py  evaluate.py  exp.py  framework_update_results.csv  gather_results_for_model.py  gather_rows.py  get_neg_predictions.py  index.html  launch_all_jobs.sh  launch_job.sh  (+65 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: Enchatment.yaml  bug_report.md  bug_report.yaml  enchatment.yaml  enhancement.yaml  eval_request.yaml  new_dataset.yaml  new_model.yaml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  bug_report.yaml  new_dataset.md  new_dataset.yaml  new_model.md  new_model.yaml
.github/disabled_workflows/: lint.yml  release.yml
.github/workflows/: api_docker.yml  dataset_loading.yml  dataset_loading_pr.yml  docs.yml  documentation.yml  hf_space_docker.yml  leaderboard_build.yml  leaderboard_docker.yml  leaderboard_healthcheck.yml  leaderboard_refresh.yaml  lint.yml  mmteb.yml  model_loading.yml  python-package.yml  reference_models.yml  release.yml  semantic_release.yaml  stale_pr.yml  test.yml  test_lowest.yml  tests.yml  typechecking.yml  update_leaderboard_models.yml  welcome_new_comers.yml
.specstory/history/: 2026-04-23_09-55Z-testing-mechanism-for-new-datasets.md
CONTRIBUTING/: index.html
PromptRetrieval/: README.md  bridge_content_encoder.py  eval.py  eval_geoquery.py  inference.py  inference_mwoz.py  utils.py
PromptRetrieval/data/: dbpedia_14_eval.json  dbpedia_14_train.json  geoquery_eval.json  geoquery_train.json  hellaswag_eval.json  hellaswag_train.json  mnli_eval.json  mnli_train.json  mrpc_eval.json  mrpc_train.json  mw24_ontology.json  mwoz_eval.json  nq_eval.json  (+6 more)
adding_a_benchmark/: index.html
adding_a_dataset/: index.html
adding_a_model/: index.html
api/: index.html
api_overview/: index.html
benchmarks/: index.html
cli/: index.html
demo/: benchmark_st.py  benchmark_st2.1  benchmark_st2.py  benchmark_st3.1  benchmark_st3.py  benchmark_vllm.py  benchmark_vllm2.1  benchmark_vllm2.py  benchmark_vllm3.1  benchmark_vllm3.py  embed.py  rerenk.py
docs/: CONTRIBUTING.md  adding_a_benchmark.md  adding_a_dataset.md  adding_a_leaderboard_tab.md  adding_a_model.md  adding_a_task.md  benchmarks.md  cli.md  contributing.md  creat_tasks_table.py  create_benchmarks_table.py  create_datasets_table.py  create_tasks_table.py  datasets.md  getting_started.md  index.md  installation.md  mieb.md  references.bib  reproducible_workflow.md  tasks.md  whats_new.md
examples/: evaluate_model.py  evaluate_retrieval_distributed.py
getting_started/: index.html
installation/: index.html
mieb-docs/: README.md
mteb/: MTEB.py  MTEBResults.py  __init__.py  __main__.py  _create_dataloaders.py  _helpful_enum.py  _log_once.py  _nested_tqdm.py  _requires_package.py  _set_seed.py  benchmarks.py  cache.py  caching.py  cli.py  cmd.py  create_dataloaders.py  create_meta.py  create_results_table.py  create_table.py  cross_encoder_interface.py  custom_validators.py  data_loading_utils.py  deprecated_evaluator.py  encoder_interface.py  evaluate.py  filter_tasks.py  get_tasks.py  import_utils.py  iso_15924_to_script.json  iso_639_3_to_language.json  language_family.json  languages.py  load_results.py  logging.py  modalities.py  model_meta.py  normalize_embeddings.py  overview.py  overview_fns.py  reference_models.py  (+11 more)
overview/: create_available_benchmarks.py  create_available_models.py  create_available_tasks.py  index.html
reproducible_workflow/: index.html
scripts/: analyze_maeb_task_selection.py  analyze_video_and_audio_video.py  bench_api.py  bench_api_inproc.py  bench_leaderboard.py  bench_leaderboard_breakdown.py  bench_leaderboard_perf.py  build_docs_filtered.py  build_docs_strict_filtered.py  build_docs_strict_filtered.sh  calculate_eval_times.py  calculate_maeb_correlation.py  calculate_memory_usage.py  check_circular_imports.py  compare_leaderboard_results.py  convert_cls_to_pair_cls.py  convert_hac_to_pair_cls.py  create_dataset_citations_bib.py  create_language_family_mapping.py  create_table.py  eval_bm25_chinese.py  extract_datasets.py  extract_model_names.py  failures.json  fill_retrieval_descriptive_stats.py  format_citations.py  generate_imports.py  generate_leaderboard_models.py  generate_maeb_latex_table.py  generate_maeb_overview_tables.py  generate_metadata.py  generate_og_images.py  generate_og_images_mpl.py  maeb_eval_time_analysis.py  make_leaderboard.py  merge_cqadupstack.py  mieb_des_stats.py  mmteb_create_author_list.ipynb  model_citations_report.csv  model_load_failures.json  (+37 more)
search/: search_index.json
tasks/: index.html
test/: embed.py
tests/: __init__.py  checked_hf_specifications.jsonl  conftest.py  historic_datasets.py  mock_models.py  mock_tasks.py  task_grid.py  test_ClusteringEvaluator.py  test_InstructionRetrievalEvaluator.py  test_PairClassificationEvaluator.py  test_RerankingEvaluator.py  test_RetrievalEvaluator.py  test_TaskMetadata.py  test_agentic.py  test_all_abstasks.py  test_benchmark.py  test_citation_formatting.py  test_cli.py  test_embedding_caching.py  test_encoder_interface.py  test_encoder_interfaces.py  test_evaluate.py  test_filter_tasks.py  test_get_model.py  test_get_tasks.py  test_langscript_filter.py  test_langscripts.py  test_languages.py  test_leaderboard.py  test_mock_task_import.py  test_modality_filtering.py  test_mteb.py  test_mteb_rerank.py  test_mteb_results.py  test_mteb_tests_import.py  test_overview.py  test_overview_filters.py  test_reference_model_coverage.py  test_reference_model_integration.py  test_reference_models.py  (+10 more)
tmp/: slowest_segment.py
whats_new/: index.html
(+11430 files in other folders)
