[metadata]
name = mteb
author = "MTEB"
author-email =
summary = Massive Text Embedding Benchmark
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/embeddings-benchmark/mteb-draft
project_urls =
    Huggingface Organization = https://huggingface.co/mteb
    Source Code = https://github.com/embeddings-benchmark/mteb-draft
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    nlp
    sentence-transformers

[files]
packages =
    mteb

[entry_points]
console_scripts =
    mteb = mteb.cmd:main