[metadata]
name = mteb
author = "MTEB"
author-email =
summary = Massive Text Embedding Benchmark
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/embeddings-benchmark/mteb-draft
project_urls =
    Huggingface Organization = https://huggingface.co/mteb
    Source Code = https://github.com/embeddings-benchmark/mteb-draft
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    nlp
    sentence-transformers

[extras]
beir =
    beir

[files]
packages =
    mteb

[entry_points]
console_scripts =
    mteb = mteb.cmd:main

[isort]
default_section = FIRSTPARTY
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = transformers
known_third_party =
    absl
    conllu
    datasets
    elasticsearch
    fairseq
    faiss-cpu
    fastprogress
    fire
    fugashi
    git
    h5py
    matplotlib
    nltk
    numpy
    packaging
    pandas
    PIL
    psutil
    pytest
    pytorch_lightning
    rouge_score
    sacrebleu
    seqeval
    sklearn
    streamlit
    tensorboardX
    tensorflow
    tensorflow_datasets
    timeout_decorator
    torch
    torchaudio
    torchtext
    torchvision
    torch_xla
    tqdm

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = True

[flake8]
ignore = E203, E501, E741, W503, W605
max-line-length = 119